syntax = "proto3";

package service;

// Generate service.pb.go:
// protoc --proto_path=FileService --go_out=plugins=grpc:FileService FileService/service.proto

service FileTransfer {
	// Upload a file to another location
	rpc Upload(UploadRequest) returns (UploadReply) {}
	// Download a file from another location
	rpc Download(DownloadRequest) returns (DownloadReply) {}
}

message UploadRequest {
	string fileContents = 1;
	string sdfsFileName = 2;
}

message UploadReply {
	bool status = 1;
}

message DownloadRequest {
	string sdfsFileName = 1;
}

message DownloadReply {
	bool doesFileExist = 1;
	string fileContents = 2;
}